<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imie"
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/labelImie">
    </TextView>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pod1"
        android:inputType="text"
        android:id="@+id/imie"
        app:layout_constraintStart_toEndOf="@id/labelLOcen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/labelImie"
        >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwisko"
        app:layout_constraintTop_toBottomOf="@id/labelImie"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:id="@+id/labelNazwisko"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pod2"
        android:id="@+id/nazwisko"
        app:layout_constraintStart_toEndOf="@id/labelLOcen"
        app:layout_constraintBaseline_toBaselineOf="@id/labelNazwisko"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lOcen"
        app:layout_constraintTop_toBottomOf="@id/labelNazwisko"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:id="@+id/labelLOcen"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pod3"
        android:inputType="number"
        android:id="@+id/liczba"
        app:layout_constraintStart_toEndOf="@id/labelLOcen"
        app:layout_constraintBaseline_toBaselineOf="@id/labelLOcen"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekstKon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button"
        android:visibility="gone"
        android:id="@+id/textAverage">
    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oc"
        android:id="@+id/button"
        app:layout_constraintTop_toBottomOf="@id/labelLOcen"
        android:layout_marginTop="40dp">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>